# xiaozhiAI_custom

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cc  my_test.txt
main/boards/esp32-s3-touch-lcd-1.85c/: esp32-s3-touch-lcd-1.85c.cc
main/boards/fishkids-esp32s3-wifi/: config.h  config.json  fishkids_esp32s3_wifi.cc
main/common/: wifi_board.cc  wifi_board.h
main/my_spi_connect/: spi_connect.cc  spi_connect.h
main/my_udp/: my_udp.cc  my_udp.h
